--- a/app/views/pages/curu_albums.html.slim
+++ b/app/views/pages/curu_albums.html.slim
@@ -1,4 +1,4 @@
-a#album_link    href='http://google.com'
+= link_to pages_curu_lesson_path, id: :album_link do
   |Свадебные журавлики
   br
   =image_tag('curu/foto.jpg', height: 200)
