--- a/app/views/pages/curu_history_topics.html.slim
+++ b/app/views/pages/curu_history_topics.html.slim
@@ -1,10 +1,10 @@
 #about_history_story
   |Быль и небыль о бумажных журавликах. Факты, мифы, легенды...
 br
-a.topic_link История цуру
+= link_to 'История цуру', pages_curu_story_path, class: :topic_link
 br
 a.topic_link Журавлики. Кто они?
 br
 a.topic_link Бумага и счастье. В чем их связь?
 #add
-  a.add Рассказать историю...
+  = link_to 'Рассказать историю...', pages_curu_tell_history_story_path, class: :add
