--- a/app/views/pages/curu_albums.html.slim
+++ b/app/views/pages/curu_albums.html.slim
@@ -24,3 +24,6 @@ a#album_link_2    href='http://google.com'
   br
   =image_tag('curu/foto.jpg', height: 200)
 
+  #add
+    = link_to 'Добавить альбом...', pages_curu_tell_history_story_path, class: :add
+
