--- a/app/assets/stylesheets/curu_albums.sass
+++ b/app/assets/stylesheets/curu_albums.sass
@@ -10,3 +10,7 @@ body.curu_albums
 
     #album_link_1, #album_link_2
       margin-left: 30px
+
+    #add
+      font-family: Tahoma
+      margin-top: 100px
