новая картинка на главной, редакция выравнивания контента везде

--- a/app/assets/stylesheets/1_curu.sass
+++ b/app/assets/stylesheets/1_curu.sass
@@ -4,6 +4,7 @@
 +sticky-footer(63px)
 
 body
+  min-width: 1000px
   background: no-repeat image-url('curu/lines.png')
   a
     text-decoration: none
@@ -70,7 +71,7 @@ body
     margin-left: 100px
     font-size: 150%
     text-align: center
-    margin-top: 100px
+    margin-top: 110px
     overflow: hidden
 
 
