--- a/app/assets/stylesheets/curu_albums.sass
+++ b/app/assets/stylesheets/curu_albums.sass
@@ -1,6 +1,6 @@
 body.curu_albums
   #content
-    text-align: left
+    text-align: center
 
     #album_link, #album_link_1, #album_link_2
       color: black
