--- a/app/assets/stylesheets/curu_differents.sass
+++ b/app/assets/stylesheets/curu_differents.sass
@@ -1,6 +1,6 @@
 body.curu_differents
   #content
-    text-align: left
+    text-align: center
 
     #add_topic, #about_differents
       font-family: Tahoma
