--- a/app/assets/stylesheets/curu_topics.sass
+++ b/app/assets/stylesheets/curu_topics.sass
@@ -1,6 +1,6 @@
 body.curu_history_topics, body.curu_magic_topics
   #content
-    text-align: left
+    text-align: center
 
     #add, #about_history_story, #about_magic_story
       font-family: Tahoma
