--- a/app/assets/stylesheets/curu_tell_story.sass
+++ b/app/assets/stylesheets/curu_tell_story.sass
@@ -1,6 +1,6 @@
 body.curu_tell_history_story, body.curu_tell_magic_story
   #content
-    text-align: left
+    text-align: center
   #user_table
     input
       border: 1px solid
