--- a/app/views/pages/curu_magic_topics.html.slim
+++ b/app/views/pages/curu_magic_topics.html.slim
@@ -1,3 +1,5 @@
+- @title = 'ВОЛШЕБСТВО'
+
 #about_magic_story
   |Тут живут ваши истории, в которых журавлики принимали непосредственное участие, или, может быть, даже творили настоящие чудеса!..
 br
