--- a/app/views/pages/curu_main.html.slim
+++ b/app/views/pages/curu_main.html.slim
@@ -4,6 +4,7 @@ html
     meta(charset="utf-8")
     link rel="shortcut icon" href=image_path('curu/favicon.png') type="image/png"
     =stylesheet_link_tag 'curu_main'
+    title ЦУРУ
   body
     #root
       #header
