--- a/app/views/pages/curu_differents.html.slim
+++ b/app/views/pages/curu_differents.html.slim
@@ -1,3 +1,5 @@
+- @title = 'РАЗНОСТИ'
+
 #about_differents
   |Добавляем разности и красивости, относящиеся к нашим любимым журавликам (рисунки, фотосессии и т.д.)
   br
