--- a/app/assets/stylesheets/curu_main.sass
+++ b/app/assets/stylesheets/curu_main.sass
@@ -19,7 +19,7 @@ body
       top: 160px
     text-align: center
 
-    #content_main
+    #main_menu
       position: relative
       height: 370px
       width: 715px
@@ -29,7 +29,6 @@ body
 
 
   #lesson_main,  #history_main, #magic_main, #topic_main
-    //background-color: blue
     position: absolute
     width: 157px
     height: 120px
