--- a/app/views/pages/curu_main.html.slim
+++ b/app/views/pages/curu_main.html.slim
@@ -8,7 +8,7 @@ html
   body
     #root
       #header
-        #content_main
+        #main_menu
           =image_tag('curu/main-menu.png', height: 370)
           = link_to '', pages_curu_history_topics_path, id: :history_main
           = link_to '', pages_curu_magic_topics_path, id: :magic_main
