--- a/app/assets/stylesheets/curu_topics.sass
+++ b/app/assets/stylesheets/curu_topics.sass
@@ -1,4 +1,4 @@
-body.curu_history_topics, body.curu_magic_topics
+body.stories.index, body.curu_magic_topics
 
   #add, #about_history_story, #about_magic_story
     font-family: Tahoma
