Use inherited_resources

--- a/app/assets/stylesheets/curu_tell_story.sass
+++ b/app/assets/stylesheets/curu_tell_story.sass
@@ -1,4 +1,4 @@
-body.stories.new, body.curu_tell_magic_story
+body.stories.new, body.stories.create, body.curu_tell_magic_story
 
   #content
     text-align: left
