--- a/app/views/stories/index.html.slim
+++ b/app/views/stories/index.html.slim
@@ -2,9 +2,6 @@
 
 #about_history_story
   |Быль и небыль о бумажных журавликах. Факты, мифы, легенды...
-br
-- @stories.each do |story|
-  br
-  = link_to story.title, story, class: :topic_link
+= render partial: 'list'
 #add
   = link_to 'Рассказать историю...', new_story_path, class: :add
