отредактирован формы комментариев и добавления историй, добавлена кнопка НАВЕРХ

--- a/app/assets/stylesheets/1_curu.sass
+++ b/app/assets/stylesheets/1_curu.sass
@@ -72,6 +72,26 @@ body
     margin-top: 110px
     overflow: hidden
 
+  #up
+    float: right
+    position: absolute
+    right: 250px
+    bottom: 70px
+    input[type=button]
+      font-family: Tahoma
+      font-size: 17px
+      border: 1px solid
+      border-color: #ffffff
+      background-color: #ffffff
+      box-shadow: none
+      &:hover
+        border-color: #f5c2a3
+      &:active
+        border-color: #f5c2a3
+        background-color: #fecbac
+      &:focus
+        outline:
+          color: #f5c2a3
 
   #footer
     font-size: 55%
