--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,6 +18,8 @@ html
           = link_to 'ВОЛШЕБСТВО', stories_path(magic: true), id: :magic
         #content
           = yield
+          #up
+            input type="button" value="НАВЕРХ"
       #root_footer
     #footer
       #made_by
