--- a/app/assets/stylesheets/curu_story.sass
+++ b/app/assets/stylesheets/curu_story.sass
@@ -1,57 +1,3 @@
-body.stories.show
-
-  #comment
-    text-align: left
-    margin-top: 20px
-    font-family: Tahoma
-    font-size: 17px
-
-  #area
-    input
-      border: 1px solid
-      border-color: #b5b5ac
-    input:hover
-      border-color: #b5b5ac
-    input:active
-      background-color: #ffffff
-      outline:
-        color: #fe7501
-    textarea:focus
-      outline:
-        color: #fe7501
-
-  #table
-    font-family: Tahoma
-    font-size: 17px
-    float: left
-    margin-right: 10px
-
-  #inputs
-    margin-bottom: 20px
-    input
-      font-family: Tahoma
-      font-size: 17px
-      border: 1px solid
-      border-color: #ffffff
-      background-color: #ffffff
-      box-shadow: none
-    input:hover
-      border-color: #f5c2a3
-    input:active
-      border-color: #f5c2a3
-      background-color: #fecbac
-
-  #attention_comment
-    margin:
-      top: 5px
-      bottom: 10px
-    font-size: 12px
-    color: darkred
-
-  #your_comment
-    font-family: Times New Roman
-    line-height: 1.6
-    font-size: 110%
-    margin:
-      top: 10px
-      bottom: 10px
+//body.stories.show
+//
+//
