--- a/app/views/stories/_form.html.slim
+++ b/app/views/stories/_form.html.slim
@@ -1,41 +1,31 @@
-= simple_form_for @story do |f|
+= simple_form_for @story, html: { class: "story" } do |f|
   = f.error_notification
 
-  .field
-    = f.input :author, label: 'Рассказчик:'
-  .field
-    = f.input :title, label: 'Название:'
-  .field
-    = f.input :text, label: 'Ваша история:'
-  = f.input_field :magic, as: :hidden, value: params[:magic] || false
-  .actions
-    input type="button" value="Добавить изображение"
-    = f.submit 'Отправить'
-
+  #story_table
+    .field
+      = f.input :author, label: 'Рассказчик:'
+    .field
+      = f.input :title, label: 'Название:'
+    .field
+      = f.input :text, label: 'Ваша история:'
+    = f.input_field :magic, as: :hidden, value: params[:magic] || false
+  #story_attention
+    |Дорогие посетители!
+    br
+    |Статьи, содержащие мат, пошлость, рекламу или дубликат уже имеющихся данных, будут удалены!!!
+    br
+    |Также просим указывать авторов публикуемых рассказов и изображений.
+    br
+    |с уважением,
+    br
+    |адиминистрация сайта
+  #buttons
+    .actions
+      input type="button" value="Добавить изображение"
+      br
+      = f.submit 'Отправить'
 
 
 - @title = 'ВАША ИСТОРИЯ'
-#user
-  |Рассказчик:
-  br
-  |Ваша история:
-#user_table
-  input type="text"
-  br
-  textarea size="500"
-  br
-  br
-#inputs
-  input type="button" value="Добавить изображение"
-  br
-  input type="button" value="Отправить"
-#attention
-  |Дорогие посетители!
-  br
-  |Статьи, содержащие мат, пошлость, рекламу или дубликат уже имеющихся данных, будут удалены!!!
-  br
-  |Также просим указывать авторов публикуемых рассказов и изображений.
-  br
-  |с уважением,
-  br
-  |адиминистрация сайта
+
+
