отредактирована кнопка наверх

--- a/app/assets/stylesheets/1_curu.sass
+++ b/app/assets/stylesheets/1_curu.sass
@@ -75,8 +75,8 @@ body
   #up
     float: right
     position: absolute
-    right: 250px
-    bottom: 70px
+    left: 25px
+    top: 200px
     input[type=button]
       font-family: Tahoma
       font-size: 17px
