--- a/app/assets/stylesheets/comments.sass
+++ b/app/assets/stylesheets/comments.sass
@@ -53,6 +53,7 @@ form.comment
     bottom: 10px
   font-size: 12px
   color: darkred
+  clear: both
 
 #your_comment
   font-family: Times New Roman
