--- a/app/assets/stylesheets/stories_form.sass
+++ b/app/assets/stylesheets/stories_form.sass
@@ -23,3 +23,13 @@ form.story
     bottom: 10px
   font-size: 14px
   color: darkred
+  clear: both
+
+.alert, .alert-error
+  font-family: Tahoma
+  font-size: 20px
+  color: darkred
+  margin-bottom: 15px
+
+span.error
+  color: darkred
