--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,7 +19,7 @@ html
         #content
           = yield
           #up
-            input type="button" value="НАВЕРХ"
+            input type="button" value="Наверх"
       #root_footer
     #footer
       #made_by
