--- a/app/views/stories/_form.html.slim
+++ b/app/views/stories/_form.html.slim
@@ -1,3 +1,5 @@
+- @title = 'ВАША ИСТОРИЯ'
+
 = simple_form_for @story, html: { class: "story" } do |f|
   = f.error_notification
 
@@ -20,12 +22,12 @@
     br
     |адиминистрация сайта
   #buttons
+    = f.simple_fields_for :pictures do |pf|
+      = image_tag(pf.object, height: 400) if pf.object.file?
+      = pf.input_field :file, as: :file
+      = pf.hidden_field :file_cache
+      br
     .actions
       input type="button" value="Добавить изображение"
       br
       = f.submit 'Отправить'
-
-
-- @title = 'ВАША ИСТОРИЯ'
-
-
