попытка сдвинуть меню по центру на главной

--- a/app/assets/stylesheets/curu_main.sass
+++ b/app/assets/stylesheets/curu_main.sass
@@ -14,18 +14,28 @@ body
 
   #header
     background: no-repeat image-url('curu/main_title.png')
-    background-position: 50% 8%
+    background-position: 50% 18%
     padding:
-      top: 160px
+      top: 250px
     text-align: center
+    margin-top: 20px
 
-    #main_menu
-      position: relative
-      height: 370px
-      width: 715px
-      margin: 0 auto
-      margin-top: -20px
+  #main_menu
+    position: relative
+    height: 370px
+    width: 715px
+    margin: 0 auto
 
+
+
+  #main_wrap
+    position: absolute
+    top: 50%
+    left: 50%
+    height: 370px
+    width: 715px
+    margin-top: -185px
+    margin-left: -356px
 
 
   #lesson_main,  #history_main, #magic_main, #topic_main
