normal version of  try

--- a/app/views/pages/curu_main.html.slim
+++ b/app/views/pages/curu_main.html.slim
@@ -8,7 +8,7 @@ html
   body
     #root
       #header
-        #main_wrap
+        #main_menu_wrap
           #main_menu
             =image_tag('curu/main-menu.png', height: 370)
             = link_to '', stories_path, id: :history_main
