Update stylesheet tag on main page

--- a/app/views/pages/curu_main.html.slim
+++ b/app/views/pages/curu_main.html.slim
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    = stylesheet_link_tag 'curu_main'
+    = stylesheet_link_tag 'application'
     = javascript_include_tag 'application'
     link rel="shortcut icon" href=image_path('curu/favicon.png') type="image/png"
     = csrf_meta_tags
