--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,6 +1,6 @@
 - if comment.persisted?
   .comment id="comment-#{comment.id}"
-    = button_to 'Удалить', comment, method: :delete, remote: true
+    = button_to 'Удалить', comment, method: :delete, remote: true, confirm: 'Удалить комментарий?'
     .comment_name
       | #{l comment.created_at, format: :long} #{comment.author}
     .comment_content
