--- a/app/assets/stylesheets/stories_form.sass
+++ b/app/assets/stylesheets/stories_form.sass
@@ -33,3 +33,24 @@ form.story
 
 span.error
   color: darkred
+
+#buttons_story
+  input[type=submit]
+    font-family: Tahoma
+    font-size: 17px
+    border: 1px solid
+    border-color: #ffffff
+    background-color: #ffffff
+    box-shadow: none
+    &:hover
+      border-color: #f5c2a3
+    &:active
+      border-color: #f5c2a3
+      background-color: #fecbac
+    &:focus
+      outline:
+        color: #f5c2a3
+  input[type=file]
+    font-family: Tahoma
+    font-size: 17px
+
