Button to scroll

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,7 +20,7 @@ html
         #content
           = yield
           #up
-            input type="button" value="Наверх"
+            input#scroll_to_top type="button" value="Наверх"
       #root_footer
     #footer
       #made_by
