--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,7 +12,7 @@ html
       = render 'devise/logout'
       #main_wrap
         #menu
-          = link_to 'НА ГЛАВНУЮ', pages_curu_main_path, id: :home
+          = link_to 'НА ГЛАВНУЮ', root_path, id: :home
           = link_to 'ИСТОРИЯ', stories_path, id: :history
           = link_to 'УРОКИ', pages_curu_albums_path, id: :lessons
           = link_to 'ПО ТЕМЕ', pages_curu_differents_path, id: :topic
