new vkontakte picture

--- a/app/assets/stylesheets/comments.sass
+++ b/app/assets/stylesheets/comments.sass
@@ -1,7 +1,7 @@
 form.comment
   text-align: left
   margin-top: 20px
-  font-family: Tahoma
+  font-family: Tahoma, Arial
   font-size: 17px
 
   textarea
@@ -23,7 +23,7 @@ form.comment
         color: #fe7501
 
 #comment_table, #story_table
-  font-family: Tahoma
+  font-family: Tahoma, Arial
   font-size: 17px
   float: left
   margin-right: 10px
@@ -31,7 +31,7 @@ form.comment
 #buttons
   margin-bottom: 20px
   input
-    font-family: Tahoma
+    font-family: Tahoma, Arial
     font-size: 17px
     border: 1px solid
     border-color: #ffffff
