--- a/app/assets/stylesheets/curu_lesson.sass
+++ b/app/assets/stylesheets/curu_lesson.sass
@@ -8,7 +8,7 @@ body.curu_lesson
   #comment
     text-align: left
     margin-top: 20px
-    font-family: Tahoma
+    font-family: Tahoma, Arial
     font-size: 17px
 
   #area
@@ -26,7 +26,7 @@ body.curu_lesson
         color: #fe7501
 
   #table
-    font-family: Tahoma
+    font-family: Tahoma, Arial
     font-size: 17px
     float: left
     margin-right: 10px
@@ -34,7 +34,7 @@ body.curu_lesson
   #inputs
     margin-bottom: 20px
     input
-      font-family: Tahoma
+      font-family: Tahoma, Arial
       font-size: 17px
       border: 1px solid
       border-color: #ffffff
