--- a/app/assets/stylesheets/curu_tell_story.sass
+++ b/app/assets/stylesheets/curu_tell_story.sass
@@ -20,7 +20,7 @@ body.stories.new, body.stories.create, body.curu_tell_magic_story
   #user
     float: left
     margin-right: 10px
-    font-family: Tahoma
+    font-family: Tahoma, Arial
     font-size: 17px
     input
       border: 1px solid
@@ -31,12 +31,12 @@ body.stories.new, body.stories.create, body.curu_tell_magic_story
       background-color: #ffffff
 
   #story_table
-    font-family: Tahoma
+    font-family: Tahoma, Arial
     font-size: 17px
 
   #inputs
     input
-      font-family: Tahoma
+      font-family: Tahoma, Arial
       font-size: 17px
       border: 1px solid
       border-color: #ffffff
