--- a/app/assets/stylesheets/stories_form.sass
+++ b/app/assets/stylesheets/stories_form.sass
@@ -26,7 +26,7 @@ form.story
   clear: both
 
 .alert, .alert-error
-  font-family: Tahoma
+  font-family: Tahoma, Arial
   font-size: 20px
   color: darkred
   margin-bottom: 15px
@@ -36,7 +36,7 @@ span.error
 
 #buttons_story
   input[type=submit]
-    font-family: Tahoma
+    font-family: Tahoma, Arial
     font-size: 17px
     border: 1px solid
     border-color: #ffffff
@@ -51,6 +51,6 @@ span.error
       outline:
         color: #f5c2a3
   input[type=file]
-    font-family: Tahoma
+    font-family: Tahoma, Arial
     font-size: 17px
 
