--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,8 +19,8 @@ html
           = link_to 'ВОЛШЕБСТВО', stories_path(magic: true), id: :magic
         #content
           = yield
-          #up
-            input#scroll_to_top type="button" value="Наверх"
+          /#up
+          /  input#scroll_to_top type="button" value="Наверх"
       #root_footer
     #footer
       #made_by
