--- a/app/assets/stylesheets/curu_differents.sass
+++ b/app/assets/stylesheets/curu_differents.sass
@@ -1,7 +1,7 @@
 body.curu_differents
 
   #add_topic, #about_differents
-    font-family: Tahoma
+    font-family: Tahoma, Arial
 
   #add_topic
     margin-top: 20px
