--- a/app/assets/stylesheets/curu_topics.sass
+++ b/app/assets/stylesheets/curu_topics.sass
@@ -1,7 +1,7 @@
 body.stories.index, body.curu_magic_topics
 
   #add, #about_history_story, #about_magic_story
-    font-family: Tahoma
+    font-family: Tahoma, Arial
 
   #add
     margin-top: 20px
