--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,13 +9,14 @@ html
     title = @title || 'ЦУРУ'
   body class=([controller.controller_name, controller.action_name])
     #root
+      p#notice = notice
       = render 'devise/logout'
       #main_wrap
         #menu
           = link_to 'НА ГЛАВНУЮ', root_path, id: :home
           = link_to 'ИСТОРИЯ', stories_path, id: :history
           = link_to 'УРОКИ', pages_curu_albums_path, id: :lessons
-          = link_to 'ПО ТЕМЕ', pages_curu_differents_path, id: :topic
+          = link_to 'ПО ТЕМЕ', topics_path, id: :topic
           = link_to 'ВОЛШЕБСТВО', stories_path(magic: true), id: :magic
         #content
           = yield
