--- a/app/views/pages/curu_main.html.slim
+++ b/app/views/pages/curu_main.html.slim
@@ -16,7 +16,7 @@ html
           = link_to '', stories_path, id: :history_main
           = link_to '', stories_path(magic: true), id: :magic_main
           = link_to '', pages_curu_albums_path, id: :lesson_main
-          = link_to '', pages_curu_differents_path, id: :topic_main
+          = link_to '', topics_path, id: :topic_main
       #root_footer
     #footer
       #made_by
