--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,17 +11,10 @@ html
     #root
       p#notice = notice
       = render 'devise/logout'
-      #main_wrap
-        #menu
-          = link_to 'НА ГЛАВНУЮ', root_path, id: :home
-          = link_to 'ИСТОРИЯ', stories_path, id: :history
-          = link_to 'УРОКИ', pages_curu_albums_path, id: :lessons
-          = link_to 'ПО ТЕМЕ', topics_path, id: :topic
-          = link_to 'ВОЛШЕБСТВО', stories_path(magic: true), id: :magic
-        #content
-          = yield
-          /#up
-          /  input#scroll_to_top type="button" value="Наверх"
+      - if content_for? :content
+        = yield :content
+      - else
+        = yield
       #root_footer
     #footer
       #made_by
