отредактировано создание нового раздела в "теме"

--- a/app/assets/stylesheets/curu_main.sass
+++ b/app/assets/stylesheets/curu_main.sass
@@ -19,18 +19,23 @@ body
       top: 20px
     text-align: center
 
-  #main_menu_wrap
-    display: inline-block
-    vertical-align: middle
-    margin-top: 130px
+
+
+
 
   #main_menu
     position: relative
     height: 370px
     width: 715px
     margin: 0 auto
+    margin-top: 130px
 
 
+
+  //#main_menu_wrap
+  //  float: left
+  //  height: 50%
+  //  margin-bottom: -185px
 
 
   //#main_menu_wrap
