--- a/app/views/topics/_form.html.slim
+++ b/app/views/topics/_form.html.slim
@@ -2,7 +2,7 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :title
+    = f.input :title, label: 'Название'
 
   .form-actions
-    = f.button :submit
+    = f.submit 'Создать раздел'
