--- a/app/assets/stylesheets/stories.css.sass
+++ b/app/assets/stylesheets/stories.css.sass
@@ -1,3 +1,5 @@
-// Place all the styles related to the Stories controller here.
-// They will automatically be included in application.css.
-// You can use Sass here: http://sass-lang.com/
+#add_story
+  a
+    font-family: Tahoma, Arial
+    margin-top: 20px
+
