--- a/app/views/stories/index.html.slim
+++ b/app/views/stories/index.html.slim
@@ -3,5 +3,5 @@
 #about_history_story
   |Быль и небыль о бумажных журавликах. Факты, мифы, легенды...
 = render partial: 'list'
-#add
+#add_story
   = link_to 'Рассказать историю...', new_story_path, class: :add
