--- a/app/views/stories/index_magic.slim
+++ b/app/views/stories/index_magic.slim
@@ -3,5 +3,5 @@
 #about_magic_story
   |Тут живут ваши истории, в которых журавлики принимали непосредственное участие, или, может быть, даже творили настоящие чудеса!..
 = render partial: 'list'
-#add
+#add_story
   = link_to 'Рассказать историю...', new_story_path(magic: true), class: :add
