Remove topic field from album form

--- a/app/views/albums/_form.html.slim
+++ b/app/views/albums/_form.html.slim
@@ -1,9 +1,9 @@
+| Название раздела: #{parent.title}
 = simple_form_for [parent, @album] do |f|
   = f.error_notification
 
   .form-inputs
     = f.input :title
-    = f.association :topic
 
   .form-actions
     = f.button :submit
