Отредактированы отступы ВЕЗДЕ, убраны лишние css

--- a/app/assets/stylesheets/comments.sass
+++ b/app/assets/stylesheets/comments.sass
@@ -22,7 +22,7 @@ form.comment
       outline:
         color: #fe7501
 
-#comment_table, #story_table
+#comment_table
   font-family: Tahoma, Arial
   font-size: 17px
   float: left
