--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,5 +1,99 @@
 @import compass
+@import "compass/reset"
+@import "compass/layout"
 @import "**/*"
 
-#scroll_to_top
-  display: none
++sticky-footer(63px)
+
+body
+  min-width: 1000px
+  background: no-repeat image-url('curu/lines.png')
+  a
+    text-decoration: none
+    &:visited
+      color: black
+
+
+
+  #main_wrap
+    min-height: 350px
+    text-align: center
+
+
+  #menu
+    a
+      color: black
+      font-size: 170%
+      font-family: Arial
+      font-weight: bold
+    display: inline-block
+    margin:
+      top: 25px
+
+  #home, #history, #lessons, #topic, #magic
+    margin-right: 20px
+
+  #home
+    &:hover
+      border-bottom: solid 3px #2e8466
+    &:active
+      border-bottom: solid 3px #2e8466
+  #history
+    &:hover
+      border-bottom: solid 3px #b50000
+    &:active
+      border-bottom: solid 3px #b50000
+  #lessons
+    &:hover
+      border-bottom: solid 3px #003948
+    &:active
+      border-bottom: solid 3px #003948
+
+  #topic
+    &:hover
+      border-bottom: solid 3px #ff5800
+    &:active
+      border-bottom: solid 3px #ff5800
+
+  #magic
+    &:hover
+      border-bottom: solid 3px #2e8466
+      &:active
+        border-bottom: solid 3px #2e8466
+
+
+  #content
+    margin: 0 auto
+    width: 1000px
+    font-family: Times New Roman
+    line-height: 1.6
+    padding: 10px
+    margin-left: 100px
+    font-size: 150%
+    text-align: center
+    margin-top: 110px
+    overflow: hidden
+
+
+  #footer
+    font-size: 55%
+    font-family: Arial
+    font-weight: bold
+    padding-top: 20px
+    padding-bottom: 2px
+    box-sizing: border-box
+    background: repeat-x image-url('curu/footer.png')
+
+  #copyright, #made_by
+    display: inline-block
+
+  #copyright
+    float: right
+    text-align: center
+    padding-right: 10px
+    padding-top: 5px
+
+  #made_by
+    line-height: 1.4
+    padding-left: 10px
+    float: left
