--- a/app/assets/stylesheets/diff_albums.sass
+++ b/app/assets/stylesheets/diff_albums.sass
@@ -1,10 +1,6 @@
-form.story
-  textarea
-    vertical-align: middle
-    margin-left: 5px
+body.albums.new
 
-  textarea, input[type=text]
-    float: right
+  input[type=text]
     border: 1px solid
     border-color: #b5b5ac
     &:hover
@@ -17,24 +13,6 @@ form.story
       outline:
         color: #fe7501
 
-#story_attention
-  margin:
-    top: 5px
-    bottom: 10px
-  font-size: 14px
-  color: darkred
-  clear: both
-
-.alert, .alert-error
-  font-family: Tahoma, Arial
-  font-size: 20px
-  color: darkred
-  margin-bottom: 15px
-
-span.error
-  color: darkred
-
-#buttons_story
   input[type=submit]
     font-family: Tahoma, Arial
     font-size: 17px
@@ -50,7 +28,14 @@ span.error
     &:focus
       outline:
         color: #f5c2a3
-  input[type=file]
-    font-family: Tahoma, Arial
-    font-size: 17px
 
+  #h1
+    font-family: Tahoma, Arial
+    font-size: 20px
+    margin-bottom: 10px
+
+  .album_title
+    label
+      font-family: Tahoma, Arial
+      font-size: 17px
+      margin-right: 5px
