--- a/app/assets/stylesheets/stories.sass
+++ b/app/assets/stylesheets/stories.sass
@@ -1,6 +1,11 @@
-body.topics.new
+form.story
 
-  input[type=text]
+  textarea
+    vertical-align: middle
+    margin-left: 5px
+
+
+  textarea, input[type=text]
     border: 1px solid
     border-color: #b5b5ac
     &:hover
@@ -13,6 +18,24 @@ body.topics.new
       outline:
         color: #fe7501
 
+#story_attention
+  margin:
+    top: 5px
+    bottom: 10px
+  font-size: 14px
+  color: darkred
+  clear: both
+
+.alert, .alert-error
+  font-family: Tahoma, Arial
+  font-size: 20px
+  color: darkred
+  margin-bottom: 15px
+
+span.error
+  color: darkred
+
+#buttons_story
   input[type=submit]
     font-family: Tahoma, Arial
     font-size: 17px
@@ -28,26 +51,21 @@ body.topics.new
     &:focus
       outline:
         color: #f5c2a3
-
-  h1
+  input[type=file]
     font-family: Tahoma, Arial
-    font-size: 20px
-    margin-bottom: 10px
+    font-size: 17px
 
 
-  .topic_title
-    label
-      font-family: Tahoma, Arial
-      font-size: 17px
-      margin-right: 5px
-
-
-#add_topic, .diff_new_album
+#add_story
   font-family: Tahoma, Arial
   margin-top: 20px
-  color: black
-  a
-    color: black
-    &:visited
-      color: black
 
+h1
+  font-family: Tahoma, Arial
+  margin-bottom: 20px
+
+
+#story_table
+  font-family: Tahoma, Arial
+  font-size: 17px
+  margin-right: 10px
