--- a/app/views/layouts/layout.html.slim
+++ b/app/views/layouts/layout.html.slim
@@ -2,10 +2,10 @@
   #main_wrap
     #menu
       = link_to 'НА ГЛАВНУЮ', root_path, id: :home
-      = link_to 'ИСТОРИЯ', stories_path, id: :history
+      = menu_link_to 'ИСТОРИЯ', stories_path, id: :history
       = link_to 'УРОКИ', pages_curu_albums_path, id: :lessons
-      = link_to 'ПО ТЕМЕ', topics_path, id: :topic
-      = link_to 'ВОЛШЕБСТВО', stories_path(magic: true), id: :magic
+      = menu_link_to 'ПО ТЕМЕ', topics_path, id: :topic
+      = menu_link_to 'ВОЛШЕБСТВО', stories_path(magic: true), id: :magic
     #content
       = yield
       /#up
