редакция начертаний css

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -34,33 +34,24 @@ body
     margin-right: 20px
 
   #home
-    &:hover
+    &:hover, &:active
       border-bottom: solid 3px #2e8466
-    &:active
-      border-bottom: solid 3px #2e8466
+
   #history
-    &:hover
+    &:hover, &:active, &.active
       border-bottom: solid 3px #b50000
-    &:active
-      border-bottom: solid 3px #b50000
+
   #lessons
-    &:hover
-      border-bottom: solid 3px #003948
-    &:active
+    &:hover, &:active, &.active
       border-bottom: solid 3px #003948
 
   #topic
-    &:hover
-      border-bottom: solid 3px #ff5800
-    &:active
+    &:hover, &:active, &.active
       border-bottom: solid 3px #ff5800
 
   #magic
-    &:hover
+    &:hover, &:active, &.active
       border-bottom: solid 3px #2e8466
-      &:active
-        border-bottom: solid 3px #2e8466
-
 
   #content
     margin: 0 auto
