--- a/app/assets/stylesheets/diff_albums.sass
+++ b/app/assets/stylesheets/diff_albums.sass
@@ -13,6 +13,10 @@ body.albums.new
       outline:
         color: #fe7501
 
+  input[type=file]
+    font-family: Tahoma, Arial
+    font-size: 17px
+
   input[type=submit]
     font-family: Tahoma, Arial
     font-size: 17px
