--- a/app/assets/stylesheets/stories.sass
+++ b/app/assets/stylesheets/stories.sass
@@ -68,4 +68,12 @@ h1
 #story_table
   font-family: Tahoma, Arial
   font-size: 17px
-  margin-right: 10px
+  float: left
+  margin-left: 35%
+
+
+.field
+  clear: both
+  text-align: right
+  label
+    float: left
