--- a/app/views/topics/index.html.slim
+++ b/app/views/topics/index.html.slim
@@ -1,4 +1,4 @@
-- @title = 'ПО ТЕМЕ'
+- @title = 'По теме'
 
 #about_differents
   |Добавляем разности и красивости, относящиеся к нашим любимым журавликам (рисунки, фотосессии и т.д.)
