--- a/app/views/stories/index_magic.slim
+++ b/app/views/stories/index_magic.slim
@@ -1,4 +1,4 @@
-- @title = 'ВОЛШЕБСТВО'
+- @title = 'Волшебство'
 
 #about_magic_story
   |Тут живут ваши истории, в которых журавлики принимали непосредственное участие, или, может быть, даже творили настоящие чудеса!..
