--- a/app/views/pages/curu_main.html.slim
+++ b/app/views/pages/curu_main.html.slim
@@ -3,5 +3,5 @@
     =image_tag('curu/main-menu.png', height: 370)
     = link_to '', stories_path, id: :history_main
     = link_to '', stories_path(magic: true), id: :magic_main
-    = link_to '', pages_curu_albums_path, id: :lesson_main
+    = link_to '', lessons_path, id: :lesson_main
     = link_to '', topics_path, id: :topic_main
