--- a/app/views/layouts/layout.html.slim
+++ b/app/views/layouts/layout.html.slim
@@ -3,7 +3,7 @@
     #menu
       = link_to 'НА ГЛАВНУЮ', root_path, id: :home
       = menu_link_to 'ИСТОРИЯ', stories_path, id: :history
-      = link_to 'УРОКИ', pages_curu_albums_path, id: :lessons
+      = menu_link_to 'УРОКИ', lessons_path, id: :lessons
       = menu_link_to 'ПО ТЕМЕ', topics_path, id: :topic
       = menu_link_to 'ВОЛШЕБСТВО', stories_path(magic: true), id: :magic
     #content
