--- a/app/views/albums/show.html.slim
+++ b/app/views/albums/show.html.slim
@@ -8,3 +8,6 @@ p
   = button_to 'Удалить', @album, data: { confirm: 'Удалить альбом?'}, method: :delete
 - @album.pictures.each do |picture|
   div = image_tag picture.file, height: 400
+
+= render partial: 'comments/form'
+= render @album.comments
