редакция уроков, добавлены предупреждения в уроки и альбомы разного

--- a/app/assets/stylesheets/lessons.sass
+++ b/app/assets/stylesheets/lessons.sass
@@ -1,4 +1,17 @@
-body.albums.new
+#add_lesson
+  a
+    font-family: Tahoma, Arial
+    margin-top: 20px
+
+#lessons_attention
+  margin:
+    top: 5px
+    bottom: 10px
+  font-size: 14px
+  color: darkred
+  clear: both
+
+body.lessons.new
 
   input[type=text]
     border: 1px solid
@@ -38,16 +51,3 @@ body.albums.new
     font-size: 20px
     margin-bottom: 10px
 
-  .album_title
-    label
-      font-family: Tahoma, Arial
-      font-size: 17px
-      margin-right: 5px
-
-  #album_attention
-    margin:
-      top: 5px
-      bottom: 10px
-    font-size: 14px
-    color: darkred
-    clear: both
