--- a/app/views/lessons/index.html.slim
+++ b/app/views/lessons/index.html.slim
@@ -1,6 +1,13 @@
-p Уроки:
+- @title = 'Уроки'
+
+#about_lessons
+  |Здесь мы будем учиться населять журавликами наш мир.
+  br
+  |Особая просьба в "названии" также указывать авторов схем.
+br
 
 - @lessons.each do |lesson|
   p = link_to lesson.title, lesson_path(lesson)
 
-= link_to 'Создать урок...', new_lesson_path
+#add_lesson
+  = link_to 'Создать урок...', new_lesson_path
