поменяли цвет ссылок на черный

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -10,6 +10,7 @@ body
   background: no-repeat image-url('curu/lines.png')
   a
     text-decoration: none
+    color: black
     &:visited
       color: black
 
